# KDVStocks

./: .gitmodules  CMakeLists.txt  KDVStocks_en_US.ts  README.md
